added registry dynamic DNS to helm defaults

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,7 +1,6 @@
 MSR:
-  FQDN: <image registry dynamic DNS>
+  FQDN: zvzqpyo349nhkbx2r-fljfbkzaihmejedql.labs.strigo.io
   port: 4443
-
 DB:
   tag: '1.0'
 
